# ai-new

./: Dockerfile  README.md  main.py  pyproject.toml  template.sh
app/: config.py  daily_runner.py  runner.py
app/databases/: connection.py  create_table.py  model.py  repositry.py
app/scrapers/: anthropic.py  openai.py
app/services/: process_anthropic.py  process_digest.py  process_email.py  process_youtube.py
docker/: docker-compose.yml
