[project]
name = "ai-news-aggregator"
version = "0.1.0"
description = "AI News Aggregator and YouTube Scraper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "pydantic>=2.10.6",
    "youtube-transcript-api>=0.6.3",
]

# ADD THIS LINE TO FIX THE ERROR
[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
